# Scoria-AI

./: README.md  Scoria AI Codebase
chainlink/contracts/: Adapter.sol
chainlink/scripts/: deploy.js  verify.js
chainlink/test/: Adapter.test.js
client/: Cargo.toml  config.toml
client/src/: main.rs
client/src/config/: dev.toml  prod.toml
client/src/core/cache/: lru.rs  redis.rs
client/src/core/inference/: onnx.rs  tensorrt.rs
client/src/core/model_loader/: aes.rs  integrity.rs
client/src/core/zkp/: prover.rs
client/src/core/zkp/circuits/: inference_validator.circom  privacy_swap.circom
client/src/hardware/cuda/: ffi.rs  matrix_ops.cu
client/src/hardware/opencl/: kernels.cl
client/tests/: model_loader_tests.rs
client/tests/zkp_tests/: prover_tests.rs
governance/interface/: IDaoGovernance.ts
governance/proposal_contract/programs/dao/src/: vote.rs
governance/proposal_contract/programs/dao/tests/: vote_tests.rs
indexer/: Cargo.toml
indexer/config/: database.toml  solana_cluster.toml
indexer/scripts/: start_indexer.sh
indexer/src/: main.rs  model_updater.rs  solana_listener.rs
indexer/src/database/: migrations.rs  postgres.rs
programs/: inference_engine.rs
programs/model_registry/: Cargo.toml  Xargo.toml
programs/model_registry/src/: error.rs  lib.rs  utils.rs
programs/model_registry/src/instructions/: delete.rs  register.rs  update.rs
programs/model_registry/src/state/: model.rs  version.rs
sdk/examples/: basic_usage.ts
sdk/webpack/: webpack.config.dev.js  webpack.config.prod.js
tests/load_test/: locustfile.py  report_template.html
tests/security/: slither_config.json
