[package]
name = "scoria-client"
version = "0.5.0"
edition = "2021"
description = "Decentralized AI Client for SCORIA Network"
license = "AGPL-3.0"
repository = "https://github.com/scoria-ai/client"
rust-version = "1.70.0"

[features]
default = ["gpu-accel", "async-runtime"]
gpu-accel = ["tch/cuda", "zkml/cuda"]
tpm-support = ["tpm-rs", "hsm-sdk"]
wasm = ["getrandom/js", "solana-client/web"]

[dependencies]
# Blockchain
solana-client = { version = "1.16.0", features = ["async"] }
solana-sdk = "1.16.0"
anchor-client = { version = "0.28.0", features = ["derive"] }

# Cryptography
ring = "0.17.5"
aes-gcm = { version = "0.10.2", features = ["aes"] }
blake3 = "1.4.1"
ed25519-dalek = { version = "2.1.0", features = ["serde"] }

# Zero-Knowledge
arkworks = { 
    git = "https://github.com/arkworks-rs/circom-compat", 
    rev = "a1d8b9e",
    features = ["groth16"]
}
zkml = { version = "0.7.3", features = ["inference"] }

# AI Runtime
tch = { version = "0.13.0", features = ["python"] }
onnx-runtime = { git = "https://github.com/nbigaouette/onnxruntime-rs", branch = "main" }

# Privacy
diff-privacy = { version = "0.3.1", features = ["advanced"] }
secure-enclave = { git = "https://github.com/enclave-rs/secure-compute", tag = "v0.9.2" }

# Utilities
thiserror = "1.0.50"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json"] }
log = "0.4.20"
tracing = "0.1.40"

[build-dependencies]
solana-program-build = "1.16.0"
anchor-build = "0.28.0"

[dev-dependencies]
solana-test-validator = "1.16.0"
test-case = "3.3.1"
mockito = "1.2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.production]
inherits = "release"
debug = false
strip = "symbols"

[workspace]
members = [
    "modules/zkp",
    "modules/federated",
    "modules/hsm-interface"
]
