[package]
name = "scoria-indexer"
version = "0.8.0"
edition = "2021"
description = "High-performance blockchain indexer for SCORIA AI"
license = "AGPL-3.0"
repository = "https://github.com/scoria-ai/indexer"

[features]
default = ["postgres", "metrics"]
gpu-accel = ["cuda", "opencl"]
enterprise = ["vault", "hsm", "soc2"]

# Blockchain dependencies
[dependencies]
solana-client = { version = "1.16.0", features = ["full"] }
solana-program = "=1.16.0"
anchor-lang = { version = "0.29.0", features = ["derive"] }
anchor-spl = "0.29.0"

# Database connectors
[dependencies.postgres]
version = "0.19.7"
features = ["with-uuid-1", "with-time-0.3", "with-serde_json-1"]

[dependencies.redis]
version = "0.23.3"
features = ["tokio-comp"]

# Stream processing
[dependencies.kafka]
version = "0.9.1"
optional = true

# Async runtime
[dependencies.tokio]
version = "1.35.1"
features = ["full"]

# Cryptographic operations
[dependencies.ring]
version = "0.17.5"
features = ["alloc"]

[dependencies.solana-zk-token-sdk]
version = "1.16.0"
features = ["full"]

# Data processing
[dependencies.arrow]
version = "49.0.0"
features = ["prettyprint"]

[dependencies.parquet]
version = "49.0.0"
features = ["snappy"]

# Monitoring & Observability
[dependencies.metrics]
version = "0.22.0"
features = ["procmacros"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter", "json"]

# Enterprise features
[dependencies.vault-rs]
version = "0.15.0"
optional = true
features = ["aws-kms"]

[dependencies.hsm-sdk]
version = "3.2.1"
optional = true

[build-dependencies]
vergen = { version = "8.3.1", features = ["build", "git", "gitcl"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = "symbols"

[profile.bench]
debug = false
