[package]
name = "solana-model-registry"
version = "0.1.0"
description = "Decentralized AI Model Registry on Solana"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/scoria-ai/contracts"
authors = ["Scoria AI Engineering <eng@scoria.ai>"]
documentation = "https://docs.scoria.ai/contracts/model-registry"
rust-version = "1.72.0"

[features]
default = ["anchor-attributes"]
testnet = ["solana-program/testnet"]
mainnet = ["solana-program/mainnet"]
debug = []  # Enable for local development

[dependencies]
anchor-lang = { version = "0.29.0", features = ["derive"] }
solana-program = { version = "1.16.0", features = ["program"] }
arrayref = "0.3.7"
borsh = { version = "0.10.3", features = ["derive"] }
thiserror = "1.0.50"
serde = { version = "1.0.193", features = ["derive"] }
solana-zk-token-sdk = { version = "1.16.0", optional = true }
blake3 = { version = "1.4.1", features = ["std"] }
libsecp256k1 = { version = "0.8.1", features = ["recovery"] }
solana-sbf-rust-utils = { version = "1.16.0" }

# Security-critical dependencies
[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
anchor-spl = "0.29.0"
proptest = "1.3.0"
quickcheck = "1.0.3"
criterion = "0.5.1"

[build-dependencies]
anchor-build = "0.29.0"
solana-build-tools = { version = "1.16.0", features = ["sbf"] }

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '..'
lto = true
codegen-units = 1
panic = 'abort'
incremental = false

[profile.test]
opt-level = 3
debug = 2
split-debuginfo = '..'
lto = false
codegen-units = 4
panic = 'unwind'

[profile.dev]
opt-level = 0
debug = 2
split-debuginfo = '..'
lto = false
codegen-units = 4
panic = 'unwind'

[workspace]
members = [
    "programs/model_registry",
    "programs/inference_engine"
]
exclude = [
    "programs/tests"
]

# Security audit configuration
[audit]
criticals = 0
highs = 0
ignores = [
    # "RUSTSEC-2023-XXXX",  # Add specific advisory exceptions here
]

[metadata]
security-audit = "passed"
audit-report = "https://scoria.ai/audits/model-registry-v0.1.0.pdf"

# Build configuration
[package.metadata.anchor]
features = []
seeds = []
program-test-validator = { 
    url = "http://localhost:8899",
    accounts = []
}

[package.metadata.solana]
sbf-out-dir = "target/sbf-solana-solana/release"
sbf-sysroot = "~/.cache/solana/v1.16/sbf"
